--- a/public/site.css
+++ b/public/site.css
@@ -144,3 +144,7 @@ textarea.form-control {
   border-color: #007bff;
   margin-bottom: 10px;
 }
+
+.attachment__name, .attachment__size {
+    display: none;    
+}
